--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,20 @@
+buildscript {
+    repositories {
+		mavenCentral()
+        maven {
+            name = 'sonatype-nexus-public'
+            url = 'https://oss.sonatype.org/content/repositories/public/'
+        }
+        maven {
+            name = 'forge-repo'
+            url = 'http://files.minecraftforge.net/maven/'
+        }
+    }
+    dependencies {
+        classpath 'net.minecraftforge.gradle:ForgeGradle:1.2-SNAPSHOT'
+    }
+}
+
 // Apply Gradle plugins
 plugins {
 	id 'java'
@@ -8,11 +25,15 @@ plugins {
 	id 'com.github.johnrengelman.shadow' version '1.2.1'
 }
 
+apply plugin: 'checkstyle'
+apply plugin: 'forge'
+apply plugin: 'license'
+
 defaultTasks 'clean', 'licenseFormat', 'build', 'shadowJar'
 
 // Project information
 group = 'net.caseif.quartz'
-version = '1.0.0-SNAPSHOT'
+version = '1.8-R0.1'
 
 ext.projectName = 'Quartz'
 ext.description = 'A wrapper-based implementation of SpongeAPI.'
@@ -23,14 +44,16 @@ ext.versionSuffix = version.contains('SNAPSHOT') && System.getenv('BUILD_NUMBER'
 sourceCompatibility = 1.7
 targetCompatibility = 1.7
 
+ext {
+	mcVersion = '1.8'
+	serverQual = 'net/minecraft/minecraft_server/' + mcVersion
+}
+
 // Project repositories
 repositories {
-	mavenCentral()
-    maven {
-        // for Mixin -> srg2source
-        name = "forge"
-        url = "http://files.minecraftforge.net/maven"
-    }
+	flatDir {
+		dirs file(System.getProperty('user.home') + '/.gradle/caches/minecraft/' + serverQual)
+	}
     maven {
 		// for Mixin
         name = 'minecraft'
@@ -42,11 +65,17 @@ repositories {
 dependencies {
 	compile project('SpongeAPI')
 	compile project('Mixin')
+	compile ':minecraft_server:' + mcVersion
 
 	testCompile 'junit:junit:4.12'
 	testCompile 'org.hamcrest:hamcrest-library:1.3'
 	testCompile 'org.mockito:mockito-core:1.10.19'
 	testRuntime 'org.slf4j:slf4j-simple:1.7.10'
+}
+
+// MinecraftForge version
+minecraft {
+    version = "1.8-11.14.0.1295-1.8"
 }
 
 // Read source files using UTF-8
@@ -65,9 +94,8 @@ jar {
 		attributes(
 				'Implementation-Title': project.name,
 				'Implementation-Version': version,
-				'Main-Class': 'com.headswilllol.mineflat.Main',
-				'Class-Path': 'lib/lwjgl.jar lib/gson.jar lib/soundsystem/soundsystem.jar ' +
-						'lib/soundsystem/librarylwjglopenal.jar lib/soundsystem/codecjorbis.jar lib/guava.jar'
+				'Main-Class': 'net.caseif.quartz.Main',
+				'Class-Path': 'lib/' + serverQual + '/minecraft_server-' + mcVersion + '.jar'
 		)
 	}
 	classifier = '-base'
@@ -79,6 +107,7 @@ shadowJar  {
     dependencies {
         include(project('SpongeAPI'))
         include(project('Mixin'))
+		exclude('net.minecraftforge.gradle:ForgeGradle')
     }
     classifier = ''
     
