--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     //compile project('Mixin')
 	compile ':minecraft_server-deobf:1.8'
 	compile ':srgtool:2.0'
+	compile 'org.slf4j:slf4j-simple:1.7.10'
 
     testCompile 'junit:junit:4.12'
     testCompile 'org.hamcrest:hamcrest-library:1.3'
@@ -57,7 +58,7 @@ jar {
 				'Implementation-Title': project.name,
 				'Implementation-Version': version,
 				'Main-Class': 'net.caseif.quartz.Main',
-				'Class-Path': 'lib/minecraft_server-deobf-1.8'
+				'Class-Path': 'lib/minecraft_server-deobf-1.8.jar'
 		)
 	}
 }
