--- a/build.gradle
+++ b/build.gradle
@@ -14,8 +14,8 @@ defaultTasks 'clean', 'licenseFormat', 'build', 'shadowJar'
 group = 'net.caseif.quartz'
 version = '1.8-R0.1-SNAPSHOT'
 
-sourceCompatibility = 1.6
-targetCompatibility = 1.6
+sourceCompatibility = 1.7
+targetCompatibility = 1.7
 
 // Project repositories
 repositories {
@@ -74,7 +74,7 @@ tasks.withType(JavaCompile) {
 		'-Xlint:all',
 		'-Xlint:-path',
 		'-Xlint:-processing',
-		"-AreobfSrgFile=./workspace/lib/srg/notch-mcp.srg",
+		"-AreobfSrgFile=./workspace/lib/srg/joined.srg",
 		"-AoutSrgFile=${tasks.mixin.ext.srg}",
 		"-AoutRefMapFile=${tasks.mixin.ext.refMap}"
 	]
@@ -110,15 +110,8 @@ shadowJar {
     dependencies {
 		include project(':SpongeAPI')
 		include project(':Mixin')
-		include dependency('nl.hardijzer.srgtool:srgtool')
+		include dependency('nl.hardijzer.fw.srgtool:srgtool')
 		include dependency('org.slf4j:slf4j-simple')
-		// SpongeAPI
-		/*include dependency('com.google.guava:guava:17.0')
-		include dependency('com.google.code.findbugs:jsr305:1.3.9')
-		include dependency('com.google.inject:guice:4.0-beta5')
-		include dependency('com.typesafe:config:1.2.1')
-		include dependency('com.flowpowered:flow-math:1.0.0')
-		include dependency('org.ow2.asm:asm:5.0.3')*/
 	}
 	classifier = ''
 }
